# asn1c

./: INSTALL_CUSTOM  Makefile.am  asn1c.pc.in  configure.ac
skeletons/: INTEGER.c  INTEGER.h  Makefile.am
